--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p><i class="fa fa-copyright"></i> Copyright 2020 by Grad School  
+          <p><i class="fa fa-copyright"></i> Copyright 2020 by Premium Towers School  
           
            | Design: <a href="https://Jedidiahmo.com" rel="sponsored" target="_parent">JedidiahMo</a></p>
         </div>
